--- a/Potentials/src/plugin.yml
+++ b/Potentials/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Potentials
 main: dpk.plugins.potentials.Potentials
-version: 1.0
+version: 1.1
 author: woodp1anks
 commands:
   play:
@@ -42,6 +42,12 @@ commands:
       - "brd"
     usage: "/broad <map>"
     description: "check a map's top 10."
+  mapInfo:
+    aliases:
+      - "mi"
+      - "mapInformation"
+    usage: "/mapInfo <map>"
+    description: "check a map's info(rksReq,finishRKS...)."
   RKSet:
     aliases:
       - "rs"
