Potentials plugin update: v1.2.0

--- a/Potentials/src/config.yml
+++ b/Potentials/src/config.yml
@@ -5,12 +5,13 @@ messages:
   info-head: "&6&lD&f&lPK &7- &a&l"
   info-world: "&b&lWorld: &3"
   info-rksReq: "&b&lRksReq: &3"
+  info-pttReq: "&b&lPttReq: &d"
   info-finishRKS: "&b&lFinishRKS: &3"
   broad-head: "&6&lD&f&lPK &7- &a&lBroad &7- &c&l"
   wrong-command: "&6&lD&f&lPK > &cYou send a wrong command!"
   playing-other-map: "&6&lD&f&lPK > &cYou are playing other map! please finish it first!"
   already-playing: "&6&lD&f&lPK > &cYou are already playing a map!"
-  no-enough-rks: "&6&lD&f&lPK > &cYou have no enough RKS!"
+  no-enough: "&6&lD&f&lPK > &cYou have no enough RKS or PTT!"
   player-offline: "&6&lD&f&lPK > &cPlayer is not online!"
   no-console: "&6&lD&f&lPK > &cYou are console! only player can use this command!"
   not-playing-map: "&6&lD&f&lPK > &cYou are not playing any map! please start this map first."
@@ -20,21 +21,29 @@ messages:
   wrong-edit: "&6&lD&f&lPK > &cYou can only edit a map's&a&l spawn,end,world,finishRKS,rksReq &e&l[区分大小写]"
   playing-cheat: "&6&lD&f&lPK > &cNo more cheating!"
   no-other-rks: "&6&lD&f&lPK > &cYou cant see others RKS!"
+  no-other-ptt: "&6&lD&f&lPK > &cYou cant see others PTT!"
   edit-help-spawn: "&6&lD&f&lPK > &eFor edit map's spawn,use &a&l/editMap <map> spawn <x> <y> <z>"
   edit-help-end: "&6&lD&f&lPK > &eFor edit map's end,use &a&l/editMap <map> end <x> <y> <z>"
   edit-help-world: "&6&lD&f&lPK > &eFor edit map's world,use &a&l/editMap <map> world <world>"
   edit-help-finishRKS: "&6&lD&f&lPK > &eFor edit map's finishRKS,use &a&l/editMap <map> finishRKS <finishRKS>"
   edit-help-rksReq: "&6&lD&f&lPK > &eFor edit map's rksReq,use &a&l/editMap <map> rksReq <rksReq>"
+  edit-help-pttReq: "&6&lD&f&lPK > &eFor edit map's pttReq,use &a&l/editMap <map> pttReq <pttReq>"
   start-play-map: "&6&lD&f&lPK > &eNow you are playing map &a&l"
   finish-map-front: "&6&lD&f&lPK > &b&l"
   finish-map-middle: " &eFinished map &a&l"
   finish-map-after: " &eUse &d&l"
   other-rks-front: "&6&lD&f&lPK > &a&l"
   other-rks-after: " &eHave rks: &b&l"
-  get-RKS: "&6&lD&f&lPK > &eYou have rks: &b&l"
+  other-ptt-front: "&6&lD&f&lPK > &a&l"
+  other-ptt-after: " &eHave ptt: &d&l"
+  see-RKS: "&6&lD&f&lPK > &eYou have rks: &b&l"
+  see-PTT: "&6&lD&f&lPK > &eYou have ptt: &d&l"
   success-set-rks-front: "&6&lD&f&lPK > &eYou success set &a&l"
   success-set-rks-after: "&e's rks to &b&l"
+  success-set-ptt-front: "&6&lD&f&lPK > &eYou success set &a&l"
+  success-set-ptt-after: "&e's ptt to &d&l"
   rks-been-set: "&6&lD&f&lPK > &eYour rks now is &b&l"
+  ptt-been-set: "&6&lD&f&lPK > &eYour ptt now is &d&l"
   success-stop-play: "&6&lD&f&lPK > &eSuccess stop playing map! now you can play other map!"
   success-del-map: "&6&lD&f&lPK > &eSuccess delete map &a&l"
   success-add-map: "&6&lD&f&lPK > &eSuccess add map &c&l[don't forget /editMap]&a&l"
@@ -43,6 +52,7 @@ messages:
   success-set-map-world: "&6&lD&f&lPK > &eSuccess set map world!"
   success-set-map-finishRKS: "&6&lD&f&lPK > &eSuccess set map finishRKS!"
   success-set-map-rksReq: "&6&lD&f&lPK > &eSuccess set map rksReq!"
+  success-set-map-pttReq: "&6&lD&f&lPK > &eSuccess set map pttReq!"
   success-restart-timing: "&6&lD&f&lPK > &eSuccess restart timing map &a&l"
   map-list-head: "&6&lD&f&lPK &7- &aMapList &7- &ePage&b&l"
   map-list-front-map: "&6 - &7"
