Potentials plugin update: v1.3.0

--- a/Potentials/src/config.yml
+++ b/Potentials/src/config.yml
@@ -7,6 +7,7 @@ messages:
   info-rksReq: "&b&lRksReq: &3"
   info-pttReq: "&b&lPttReq: &d"
   info-finishRKS: "&b&lFinishRKS: &3"
+  info-difficulty: "&a&lDifficulty: &e"
   broad-head: "&6&lD&f&lPK &7- &a&lBroad &7- &c&l"
   wrong-command: "&6&lD&f&lPK > &cYou send a wrong command!"
   playing-other-map: "&6&lD&f&lPK > &cYou are playing other map! please finish it first!"
@@ -28,6 +29,7 @@ messages:
   edit-help-finishRKS: "&6&lD&f&lPK > &eFor edit map's finishRKS,use &a&l/editMap <map> finishRKS <finishRKS>"
   edit-help-rksReq: "&6&lD&f&lPK > &eFor edit map's rksReq,use &a&l/editMap <map> rksReq <rksReq>"
   edit-help-pttReq: "&6&lD&f&lPK > &eFor edit map's pttReq,use &a&l/editMap <map> pttReq <pttReq>"
+  edit-help-difficulty: "&6&lD&f&lPK > &eFor edit map's difficulty,use &a&l/editMap <map> difficulty <difficulty>"
   start-play-map: "&6&lD&f&lPK > &eNow you are playing map &a&l"
   finish-map-front: "&6&lD&f&lPK > &b&l"
   finish-map-middle: " &eFinished map &a&l"
@@ -53,6 +55,7 @@ messages:
   success-set-map-finishRKS: "&6&lD&f&lPK > &eSuccess set map finishRKS!"
   success-set-map-rksReq: "&6&lD&f&lPK > &eSuccess set map rksReq!"
   success-set-map-pttReq: "&6&lD&f&lPK > &eSuccess set map pttReq!"
+  success-set-map-difficulty: "&6&lD&f&lPK > &eSuccess set map difficulty!"
   success-restart-timing: "&6&lD&f&lPK > &eSuccess restart timing map &a&l"
   map-list-head: "&6&lD&f&lPK &7- &aMapList &7- &ePage&b&l"
   map-list-front-map: "&6 - &7"
