--- a/Potentials/src/plugin.yml
+++ b/Potentials/src/plugin.yml
@@ -1,6 +1,6 @@
 name: Potentials
 main: dpk.plugins.potentials.Potentials
-version: 1.2.1
+version: 1.3.0
 author: woodp1anks
 commands:
   play:
@@ -40,14 +40,14 @@ commands:
       - "rp"
     usage: "/rePlay"
     description: "restart map timing."
-  broad:
+  board:
     aliases:
       - "top"
       - "b"
       - "bd"
       - "br"
-      - "brd"
-    usage: "/broad <map>"
+      - "brod"
+    usage: "/board <map>"
     description: "check a map's top 10."
   mapInfo:
     aliases:
